--- a/mots.tex
+++ b/mots.tex
@@ -216,8 +216,8 @@ the DN40 ports. The coil formers increase the surface area in contact
 with the chamber, increasing the rate of heat dissipation from the
 coils. 
 \par\noindent 
-\FigureRef{fig:mot_coil_temp}~shows the temperature rise after the
-coils are turned on, both at atmospheric pressure and after evacuating
+\FigureRef{fig:mot_coil_temp}~shows the temperature rise of the coils
+after they are turned on, both at atmospheric pressure and after evacuating
 the chamber. At a low pressure (here around
 \sivalue{1e-2}{\milli\bar}), the
 temperature of the coils inside the chamber does not exceed
@@ -239,11 +239,10 @@ calculated from the Biot-Savart law.
 	\caption[\ac{mot} coil temperature rise]{Temperature rise due to the
   \ac{mot} coils over 1 hour of operation. The blue curves were
 measured when the coils were at atmosphere and the orange were
-measured under a rough vacuum around \sivalue{1e-2}{\milli\bar}.
+measured under a rough vacuum around \sivalue{1e-2}{\milli\bar}. For
+the orange curve, the coils were switched on before $t=0$.
 \textbf{(a)} shows the temperature of the coils and \textbf{(b)} is
-the temperature of the exterior of the chamber. The measurements under
-rough vacuum were measured without allowing enough time for the coils
-to cool down to room temperature.}
+the temperature of the exterior of the chamber.}
 	\label{fig:mot_coil_temp_both}
 \end{figure}
 
@@ -281,7 +280,7 @@ to cool down to room temperature.}
 %\end{figure}
 \subsubsection{Bias Coils}
 Three orthogonally arranged pairs of coils are used during the
-experiment to provide a homogeneous magnetic field close to the centre of the chamber. In the initial loading and molasses stages, these are used to zero the magnetic field at the centre of the chamber. This is required for effective sub-Doppler cooling~\nocite{Walhout1992}. In subsequent stages,
+experiment to provide a homogeneous magnetic field close to the centre of the chamber. In the initial loading and molasses stages, these are used to zero the magnetic field at the centre of the chamber. This is required for effective sub-Doppler cooling. In subsequent stages,
 these coils provide a bias field along the appropriate axes during state
 preparation, interferometry and state detection. Each coil was wound using
 \sivalue{1}{\milli\metre} thick wire and consisted of 5 turns in the
@@ -368,7 +367,7 @@ by
 \end{equation}
 where \(\tau_\textnormal{exp}\) is the exposure time, \(\eta = 0.14\) is the
 quantum efficiency of the CCD and \(\alpha\) is a scaling factor that relates
-the energy to pixel counts. By varying the
+the incident light energy to pixel counts. By varying the
 exposure time used to image a collimated beam with a total power of
 \sivalue{0.17}{\micro\watt}, the total number of counts recorded by the camera
 as a function of exposure time is plotted in~\FigureRef{fig:camera_counts}. This
@@ -534,7 +533,7 @@ application which interprets the message and synchronously communicates the comm
 \ac{spi}. A glossary of the messages and their function is given
 in~\AppendixRef{app:serial_commands}. The command is stored in memory
 on-board the \ac{dds} and
-is triggered to start using a digital pulse. This means that time at
+is triggered to start using a digital pulse. This means that the time at
 which the frequency of the light changes is synchronised with the rest
 of the experiment. 
 \section{Controlling the MOTs}\label{sec:mot_control} Effective
@@ -561,17 +560,19 @@ in~\FigureRef{fig:fibre_network}. The \Muquans fibre output is
 polarised using a polarising beam-splitter before a \ac{hwp} aligns it
 with the slow axis of a \ac{pm} fibre. The light is first divided on a
 1:2 beam-splitter, with 66\% exiting one port, used for the 3D
-\ac{mot}. The 34\% on the other port is split again using another 1:2
-beam-splitter so that 95\% and 5\% of the power exits each port, for
-the 2D \ac{mot} and push beam, respectively. Independent control each
-output is done using a \textit{Gooch and Housego} fibre \acp{aom} with
-a central modulation frequency of \sivalue{135}{\mega\hertz}. The
+\ac{mot}. The 34\% on the other port is split again using a 95:5
+beam-splitter in the hope of making 34\% of the input power available
+for the 2D \ac{mot}, leaving 1.7\% for the push beam.
+But still the output powers are significantly lower than that, as
+indicated in~\FigureRef{fig:fibre_network}. The
 junctions between components are spliced together to minimise
-insertion loss. The slow axes of each fibre are aligned so that the
-polarisation of the input light is maintained. \par\noindent The light
+insertion loss. The slow axes of the spliced fibres are aligned so that the
+linear polarisation of the light is maintained. Independent control of each
+output is done using a \textit{Gooch and Housego} fibre \ac{aom} with
+a central modulation frequency of \sivalue{135}{\mega\hertz}. \par\noindent The light
 for the 3D \ac{mot} is split using a 1:3 splitter into pairs of
 outputs for the light along the \(\vec{x},\vec{y}\) and \(\vec{z}\)
-axes. Unlike the outputs along the other axes, the ones used for light
+axes. Unlike the outputs for the $\vec{x}$ and $\vec{y}$ axes, the two used for light
 along the \(\vec{z}\) axis have separate \acp{aom}. This is done so
 that during the experiment, a single beam along the \(\vec{z}\) axis
 can used to blow away background atoms (see
@@ -594,29 +595,40 @@ at each output, accounting for insertion loss and driving each
 \label{fig:fibre_network}
 \end{figure} 
 \subsection{Magnetic Field Control}\label{subsec:coil_control} 
+There are 5 pairs of bias coils used to control the zero of magnetic
+field - 3 for the 3D \ac{mot} and 2 for the 2D \ac{mot}. There are
+no bias coils along the axial direction of the 2D \ac{mot} because
+the quadrupole coils produce a field which is constant along this
+axis (see~\FigureRef{fig:2d_field_xy}). The radial position of the magnetic field zero can then be
+controlled using bias coils along the other two axes, so that the
+2D \ac{mot} forms along the axis which is co-linear with the central
+axis of the pinhole. In contrast, 3 pairs of coils are used for the 3D
+\ac{mot} so that the position of zero magnetic field coincides
+with the position where the scattering rate from each beam is the
+same. \par\noindent
 The current through each set of
-bias coils (3 for the 3D \ac{mot} and 2 for the 2D \ac{mot}) is
+bias coils is
 controlled using a voltage-controlled current source. The control
 voltage is an input at the non-inverting terminal of an OPA549 op-amp.
 The coils are placed in series with a sense resistor of resistance
-\(R_s\) at the output. The circuit is configured to that the voltage
+\(R_s\) at the output. The circuit is configured so that the voltage
 at the inverting terminal is \(V_- = i R_s\).  This forms a negative
 feed-back loop to keep the output current constant if the load
 resistance changes. The bias coils can be supplied with up to
 \sivalue{2}{\ampere} using a control voltage of \sivalue{10}{\volt}.
 \par\noindent This same circuit is used to control the 3D \ac{mot}
-coils, except for the fact that their larger resistance necessitates a
-larger gain to achieve the current necessary to produce a strong field
+coils, except for the fact that their larger resistance means that a
+smaller sense resistor is needed to achieve the current required to produce a strong field
 gradient. During the experiment, the 3D \ac{mot} coils need to be
 switched off rapidly, to allow for effective sub-Doppler cooling of
-the atoms~\cite{Dedman2001}. The coils are an inductive load, so the time taken for the
-current to decay is determined by the time constant \(\tau = L/R\).
-With a negative voltage across them, the stored energy (and hence,
-magnetic field) dissipates at a faster rate. A flux-gate magnetometer
+the atoms~\cite{Dedman2001}. By actively controlling the current
+through the coils, their stored energy can be dissipated faster than
+the natural time constant \(\tau = L/R\). This is done by applying a
+negative voltage across the coils. A flux-gate magnetometer
 was used to measure the time taken to switch off the coils. With an
 applied voltage of \sivalue{0}{\volt}, the characteristic decay time
 is \(\tau = \) \sivalue{2.5}{\milli\second}. Under the maximum
-available back-EMF of \sivalue{-24}{\volt}, the field can be
+available backward bias of \sivalue{-24}{\volt}, the field can be
 completely switched off in \sivalue{800}{\micro\second}. \par\noindent
 The quadrupole coils for the 2D \ac{mot} are switched off in much the
 same way. An IGBT cuts the flow of current when the gate voltage drops
@@ -637,10 +649,13 @@ temperature of atoms in the \ac{mot} will not be discussed in detail.
 \par\noindent \nocite{Haw2012}
 At the start of the experiment, the light and magnetic fields to produce the 2D
 and 3D \acp{mots} are switched on. \TableRef{tab:mot_parameters} shows
-typical values for the cooling and repump power, as well as the field gradients
-and bias fields used. The cooling light is detuned by \(-2 \Gamma\) from the
+typical values for the total cooling and repump powers, as well as the field gradients
+and bias fields required to cancel the external stray field from the
+lab. The cooling light is detuned by \(-2 \Gamma\) from the
 \trans{2}{3} transition for the 2D \ac{mot} and by\(-2.5 \Gamma\) for the 3D
-\ac{mot}. The push beam is at resonance. A timing diagram of the loading sequence is given in~\FigureRef{fig:mot_loading_timing}. The light and magnetic fields
+\ac{mot}. The push beam is at resonance. A timing diagram of the
+loading sequence is given in~\FigureRef{fig:mot_loading_timing}. The
+light and magnetic fields (both the quadrupole and bias fields)
 for the 2D \ac{mot} are switched off after \sivalue{100}{\milli\second} and the
 3D \ac{mot} is kept on for a further \sivalue{50}{\milli\second} to allow for
 the transit of the remaining atoms from the 2D \ac{mot} to the 3D \ac{mot}.
@@ -686,7 +701,7 @@ switching off the 3D quadrupole field prior to cooling in an optical molasses.
   and 3D \acp{mots}. The optical powers listed are the total used for
 each \ac{mot}, which is divided into separate beams. The bias field
 strengths are the values used during the preliminary trapping stage of
-the experiment. The specified field gradients are given along the
+the experiment to cancel the stray field from the lab. The specified field gradients are given along the
 radial direction and the symmetry axis of the quadrupole coils for the
 2D and 3D \acp{mots}, respectively.}
   \label{tab:mot_parameters}
@@ -710,8 +725,9 @@ The second term describes a loss rate due to collisions between trapped atoms
 and untrapped rubidium and background atoms. These loss rates are parameterised
 by \(\alpha\) and \(\beta\), respectively. The final term describes the loss of
 atoms from the trap due to intra-trap collisions~\cite{Prentiss1988} which
-depends on the density of atoms in the trap. In the case of a large flux of
-atoms from the 2D \ac{mot} the first two terms dominate, leading to a simple
+depends on the density of atoms in the trap. 
+At the number densities found in a \ac{mot}, the last term can be
+neglected, and then there is a simple
 solution for the number of atoms in the 3D \ac{mot}
 \begin{equation}
 	N(t) = \frac{R \phi _{\text{rb}} \left(1-e^{-t \left(\beta  n_{\text{bg}}+\alpha  \phi _{\text{rb}}\right)}\right)}{\beta  n_{\text{bg}}+\alpha  \phi _{\text{rb}}}
@@ -724,14 +740,12 @@ which has a steady-state atom number given by
 Under a small atomic flux, both the loading rate and steady-state atom number
 increase as the flux of atoms from the 2D \ac{mot} increases. Once this flux is
 great enough, the loss due to background atom collisions is small compared to
-the loss due to rubidium collisions and the final number is independent of
+the loss due to rubidium collisions and the number of atoms in the
+\ac{mot} becomes independent of
 \(\phi_\text{rb}\). \par\noindent The flux of atoms from the 2D \ac{mot} depends on the 2D
 \ac{mot} loading rate, which in turn depends on the capture volume and rubidium
-number density inside the cell.  Without any longitudinal cooling, a significant
-fraction of atoms leaving the cell will have a velocity greater than the 3D
-\ac{mot} capture velocity~\cite{Schoser2002}. \par\noindent The effect of
-varying the partial pressure of rubidium inside the source cell is shown
-in~\FigureRef{fig:loading_plots}. The number of atoms in the 3D \ac{mot} was measured over time for a range of dispenser currents. At low partial pressures,
+number density inside the cell. This is controlled by
+varying the partial pressure of rubidium inside the source cell. The number of atoms in the 3D \ac{mot} was measured over time for a range of dispenser currents. At low partial pressures,
 the loading rate increases due to the increase in the flux from the 2D \ac{mot}.
 As the pressure increases, the increasing flux gives a larger steady-state
 number of atoms, up until the background pressure becomes negligible.
@@ -756,16 +770,15 @@ push beam has little effect on the loading rate.
 	\subfloat[][]{\scalebox{0.3}{\includegraphics{Figures/Chapter4/loading_push.pdf}}\label{fig:loading_push}}\\
 	\subfloat[][]{\scalebox{0.3}{\includegraphics{Figures/Chapter4/loading_rate.pdf}}\label{fig:loading_rate}}
 	\caption[3D \ac{mot} atom number vs dispenser current with and without a
-		push beam.]{Number of atoms in the 3D \ac{mot} over time for a range of
-		dispenser currents. For clarity, only the loading curves for dispenser
+		push beam.]{Number of atoms and loading rate for the 3D \ac{mot}
+      $\textbf{(a)}$ without push beam and $\textbf{(b)}$ with push beam. For clarity, only the loading curves for dispenser
 		currents of
 		\sivalue{2}{\ampere} (blue),\sivalue{2.2}{\ampere}
 		(orange), \sivalue{2.4}{\ampere} (green), \sivalue{2.6}{\ampere} (red),
-		\sivalue{2.8}{\ampere} (purple) and \sivalue{3}{\ampere} (brown) are
-		shown in \((a)\) and \((b)\), which present the number of atoms over
-		time without and with a push beam, respectively. The loading rate (\(R
-		\phi_\text{rb}\) in~\EquationRef{eq:loading_rate}) in both instances is
-		shown in \((c)\). As the partial pressure of rubidium increases, the
+		\sivalue{2.8}{\ampere} (purple) and \sivalue{3}{\ampere} (brown)
+    $\textbf{(c)}$ Loading rates (\(R
+    \phi_\text{rb}\) with (orange) and without (blue) push beam. 
+		As the partial pressure of rubidium increases, the
 		flux of atoms from the source cell increases. By longitudinally cooling
 		the atoms, the push beam enhances the loading rate of the 3D \ac{mot}.
 		Above a dispenser current of
